--- a/Dockerfile.device_client
+++ b/Dockerfile.device_client
@@ -1,3 +1,7 @@
+# --------------------------------------------
+# Dockerfile for the Tango device client.
+# It compiles the device simulator Go application using golang:1.20 and runs it on an Alpine base image.
+# --------------------------------------------
 
 FROM golang:1.20 AS builder
 WORKDIR /app
@@ -5,7 +9,6 @@ WORKDIR /app
 COPY . .
 
 RUN go build -o device_client ./device_client.go
-
 
 FROM alpine:latest
 WORKDIR /root/
